--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
 ext {
     SUPPORT_LIBRARY_VERSION = '27.1.1'
 }
@@ -42,6 +43,12 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+
+    greendao {
+        schemaVersion 1  //版本
+        daoPackage 'com.android.mb.movie.greendao' // 一般为app包名+生成文件的文件夹名
+        targetGenDir 'src/main/java' //生成文件路径
+    }
 }
 
 dependencies {
@@ -63,6 +70,10 @@ dependencies {
     // RxJava
     implementation 'io.reactivex:rxjava:1.2.3'
     implementation 'io.reactivex:rxandroid:1.2.1'
+
+    //数据库
+    implementation 'org.greenrobot:greendao:3.2.2' // add library
+    implementation 'org.greenrobot:greendao-generator:3.2.2'
 
     // okhttp 3
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
