--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,4 +114,6 @@ dependencies {
     //版本更新
     implementation 'com.allenliu.versionchecklib:library:2.1.9'
 
+    //二维码
+    implementation 'com.google.zxing:core:3.2.1'
 }
