--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.android.mb.movie"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 27
         versionCode 103
         versionName "1.0.3"
@@ -116,4 +116,5 @@ dependencies {
 
     //二维码
     implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.github.smarxpan:NotchScreenTool:0.0.1'
 }
